--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>p5.js example</title>
     <style> body {padding: 0; margin: 0;} </style>
     <script src="./js/p5/p5.min.js"></script>
-    <script src="./js/p5/addons/p5.dom.min.js"></script>
     <script src="./js/p5/addons/p5.sound.min.js"></script>
+    <script src="./js/p5/addons/p5.dom.min.js"></script>
+    <script src="./js/seriously/seriously.js"></script>
+    <script src="./js/seriously/effects/seriously.blend.js"></script>
+    <script src="./js/seriously/effects/seriously.blur.js"></script>
+    <script src="./js/seriously/effects/seriously.chroma.js"></script>
+    <script src="./js/seriously/effects/seriously.exposure.js"></script>
     <script src="sketch.js"></script>
-    <div id="audio-container"></div>
-    <div id="video-container"></div>
   </head>
   <body>
   </body>
