--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./js/seriously/seriously.js"></script>
     <script src="./js/seriously/effects/seriously.blend.js"></script>
     <script src="./js/seriously/effects/seriously.blur.js"></script>
+    <script src="./js/seriously/effects/seriously.directionblur.js"></script>
     <script src="./js/seriously/effects/seriously.chroma.js"></script>
     <script src="./js/seriously/effects/seriously.exposure.js"></script>
     <script src="sketch.js"></script>
